added swager registration
