# src/models.py
@@ -1,5 +1,6 @@
 from src import db
 import uuid
+from werkzeug.security import generate_password_hash
 
 movies_actors = db.Table(
     'movies_actors',
@@ -48,3 +49,24 @@ class Actor(db.Model):
 
     def __repr__(self):
         return f'Actor({self.name}, {self.birthday})'
+
+
+class User(db.Model):
+    __tablename__ = 'users'
+
+    id = db.Column(db.Integer, primary_key=True)
+    username = db.Column(db.String(50), unique=True, nullable=False)
+    email = db.Column(db.String(50), unique=True, nullable=False)
+    password = db.Column(db.String(254), nullable=False)
+    is_admin = db.Column(db.Boolean, default=False)
+    uuid = db.Column(db.String(36), unique=True)
+
+    def __init__(self, username, email, password, is_admin=False):
+        self.username = username
+        self.email = email
+        self.password = generate_password_hash(password)
+        self.is_admin = is_admin
+        self.uuid = str(uuid.uuid4())
+
+    def __repr__(self):
+        return f'User({self.username}, {self.email}, {self.uuid})'
